# rusty-torrent-client

./: .dockerignore  DEVELOPMENT.md  DOCKER-CONFIG.md  DOCKER-README.md  DOCKER.md  Dockerfile  IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEST_GUIDE.md  docker-compose.yml  docker-quickstart.sh  nginx.conf  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  download.rs  mod.rs  peer.rs  peer_wire.rs  search.rs  seeding.rs  test.rs  torrent.rs
src-tauri/src/modules/: config.rs  config_manager.rs  dht.rs  download.rs  logging.rs  mod.rs  parser.rs  peer.rs  peer_wire.rs  pieces.rs  scanner.rs  search.rs  seeder.rs  torrent.rs  torrent_parser.rs  tracker.rs  web_server.rs
src/components/: AddTorrentDialog.css  AddTorrentDialog.tsx  ConnectionStatus.css  ConnectionStatus.tsx  Header.css  Header.tsx  TorrentItem.css  TorrentItem.tsx
src/hooks/: useConnectionTest.ts
src/pages/: ConfigPage.css  ConfigPage.tsx  HomePage.css  HomePage.tsx  SearchPage.css  SearchPage.tsx  TestPage.css  TestPage.tsx
src/services/: api.ts  store.ts
src/types/: index.ts
web/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: index.html
web/src/: App.css  App.tsx  main.tsx
web/src/components/: Header.css  Header.tsx
web/src/pages/: Dashboard.css  Dashboard.tsx
web/src/services/: api.ts  store.ts
web/src/types/: index.ts
