[package]
name = "bittorrent-client"
version = "0.1.0"
description = "A desktop Rusty Torrents built with Rust and Tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bittorrent_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
sha1 = "0.10"
bencode = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
walkdir = "2"
md5 = "0.7"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2"
dirs = "5"
lazy_static = "1.4"
hex = "0.4"


